--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+Author: Wei Yang   SLAC National Accelerator Laboratory / Stanford University
+
 xrootd-N2N-rucio-pfn2glfn requires Xrootd release 4.7 and higher
 
 This is a Xrootd (seach Github for xrootd) Ouc Name2Name plugin module to effeciently cache LHC ATLAS data files managed by the experiment's Distrubite Data Management (DDM) system (RUCIO). In RUCIO, multiply copies of one such file may be storaged in various locations. The file paths all end with .../scope/XX/XX/file.  
